@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-13
-Date: 2014-01-13
+Date: 2014-01-14
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
