@@ -1,4 +1,5 @@
 0.9-13
+- drawIsopycnals() and plotTS(): improve isopycnal labels
 - ctdDecimate() handles new method 'unesco'
 - coastline improvements (now 3 resolutions)
 - webtide() improvements
